--- a/Semana03Sesion02/d19423/index.html
+++ b/Semana03Sesion02/d19423/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <button type="submit" id="btninicio">Inicia Aqui</button>
 
 
     <script src="script.js"></script>
