--- a/Semana04Sesion01/d19423/index.html
+++ b/Semana04Sesion01/d19423/index.html
@@ -7,8 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
 
+    <div id="divUsuario" style="display: none;">
+        <label for="" id="lblNombre"></label>
+        <label for="" id="lblCorreo"></label>
+        <label for="" id="lblTelefono"></label>
+    </div>
+    
+    <button id="btnLogin">Login</button>
+    <button id="btnRegister">Registrar</button>
+    <button id="btnSalir" disabled>Salir</button>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="script.js"></script>
 </body>
 </html>
